[package]
name = "ovr_overlay"
version = "0.0.0"

description = "Rust bindings for OpenVR overlays"
authors.workspace = true
license.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true # Rust security fix

[features]
default = [
    "ovr_applications",
    "ovr_chaperone_setup",
    "ovr_input",
    "ovr_settings",
    "ovr_system",
]
ovr_applications = []
ovr_chaperone_setup = []
ovr_input = []
ovr_system = []
ovr_settings = []

[dependencies]
ovr_overlay_sys = { version = "=0.0.0", path = "sys" }
lazy_static = "1.4.0"
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["from", "into"] }
log = "0.4.22"
nalgebra = { version = "0.33.2", optional = true }
slice-of-array = "0.3.0"
enumset = "1.0.12"
byteorder = "1.4.3"


[workspace]
members = ["sys"]
resolver = "2"

# Inherited by crates
[workspace.package]
authors = ["Ryan Butler <thebutlah@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheButlah/ovr_overlay"

edition = "2021"
rust-version = "1.71.1" # Rust security fix
